Migrate to STM32CubeF4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,20 @@
 cmake_minimum_required(VERSION 3.15)
 
 project(stm32-without-cubeide
-        LANGUAGES C)
+        LANGUAGES C ASM)
 
 add_executable(blink
     main.c
-    startup.c
     syscalls.c
-    usart.c
-    vendor/CMSIS/Device/ST/STM32F4/Source/Templates/system_stm32f4xx.c)
+    usart.c)
+
+include(cmake/stm32cubef4.cmake)
+target_link_libraries(blink stm32cubef4)
 
 target_compile_options(blink PRIVATE
-    --specs=nano.specs)
-
+    --specs=nano.specs -g)
+    
 set_target_properties(blink PROPERTIES OUTPUT_NAME "blink.elf")
-
-target_include_directories(blink PRIVATE
-    vendor/CMSIS/Device/ST/STM32F4/Include
-	vendor/CMSIS/CMSIS/Core/Include)
-
-target_compile_definitions(blink 
-    PRIVATE STM32F410Rx)
 
 target_link_options(blink 
     PRIVATE -T ${CMAKE_SOURCE_DIR}/linker_script.ld 
